Fixed whitespace in title

--- a/andrewhagner/src/App.css
+++ b/andrewhagner/src/App.css
@@ -5,7 +5,7 @@ body,
 }
 
 .title {
-  padding: 2em 1em 1em 1em;
+  padding: 1rem;
   background-color: rgb(250, 250, 250);
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
@@ -18,7 +18,7 @@ body,
 }
 
 .title h1 {
-  margin-bottom: 0.25em;
+  margin-bottom: 0.25rem;
 }
 
 @media screen and (min-width: 48em) {
@@ -27,12 +27,12 @@ body,
   }
 
   .title img {
-    margin-right: 1em;
+    margin-right: 1rem;
     margin-left: auto;
   }
 
-  .title h1 {
-    margin: 0;
+  .title h1, .title span {
+    margin: 0 0 0 1rem;
   }
 
   .title-text {
